--- a/sprouts/Base.lproj/Main.storyboard
+++ b/sprouts/Base.lproj/Main.storyboard
@@ -3,6 +3,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Want Sprouts View Controller-->
@@ -52,9 +54,16 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="itemName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="BMX-4y-K0m" userLabel="itemName">
-                                                    <rect key="frame" x="10" y="169" width="79" height="21"/>
+                                                    <rect key="frame" x="10" y="146" width="79" height="21"/>
                                                     <color key="backgroundColor" red="0.043137254899999998" green="0.043137254899999998" blue="0.043137254899999998" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="itemPlace" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IW6-8w-ll3">
+                                                    <rect key="frame" x="10" y="172" width="68" height="18"/>
+                                                    <color key="backgroundColor" red="0.043137254899999998" green="0.043137254899999998" blue="0.043137254899999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -62,18 +71,28 @@
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <constraints>
+                                            <constraint firstItem="IW6-8w-ll3" firstAttribute="leading" secondItem="xTx-k7-QG4" secondAttribute="leading" constant="10" id="7Oe-Kg-lgV"/>
+                                            <constraint firstAttribute="bottom" secondItem="IW6-8w-ll3" secondAttribute="bottom" constant="10" id="HMz-ko-lrp"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="IW6-8w-ll3" secondAttribute="trailing" constant="10" id="P25-xv-QJP"/>
+                                            <constraint firstItem="IW6-8w-ll3" firstAttribute="top" secondItem="BMX-4y-K0m" secondAttribute="bottom" constant="5" id="Quf-hK-xpp"/>
                                             <constraint firstAttribute="bottom" secondItem="OMt-Mm-lLQ" secondAttribute="bottom" id="YLA-go-cvy"/>
                                             <constraint firstItem="OMt-Mm-lLQ" firstAttribute="leading" secondItem="xTx-k7-QG4" secondAttribute="leading" id="cxW-0r-jcE"/>
-                                            <constraint firstAttribute="bottom" secondItem="BMX-4y-K0m" secondAttribute="bottom" constant="10" id="fTE-zD-Cx3"/>
+                                            <constraint firstAttribute="bottom" secondItem="BMX-4y-K0m" secondAttribute="bottom" constant="50" id="fTE-zD-Cx3"/>
                                             <constraint firstItem="OMt-Mm-lLQ" firstAttribute="top" secondItem="xTx-k7-QG4" secondAttribute="top" id="fja-MR-XLA"/>
                                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="BMX-4y-K0m" secondAttribute="trailing" constant="10" id="rIV-da-GfD"/>
                                             <constraint firstItem="BMX-4y-K0m" firstAttribute="leading" secondItem="xTx-k7-QG4" secondAttribute="leading" constant="10" id="sK2-pc-lir"/>
                                             <constraint firstAttribute="trailing" secondItem="OMt-Mm-lLQ" secondAttribute="trailing" id="ubH-Hm-Vqv"/>
                                         </constraints>
                                         <size key="customSize" width="200" height="200"/>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="fTE-zD-Cx3"/>
+                                            </mask>
+                                        </variation>
                                         <connections>
                                             <outlet property="itemImage" destination="OMt-Mm-lLQ" id="MNn-vr-PvR"/>
                                             <outlet property="itemNameLabel" destination="BMX-4y-K0m" id="x9o-g1-PEY"/>
+                                            <outlet property="itemPlaceLabel" destination="IW6-8w-ll3" id="Isx-CH-TcR"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -100,6 +119,7 @@
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="Vm3-da-toZ" id="nB9-wI-rou"/>
+                        <segue destination="b7z-kt-9C0" kind="presentation" identifier="viewItem" modalPresentationStyle="overFullScreen" modalTransitionStyle="crossDissolve" id="mct-Wh-wgp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gOD-78-565" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -111,6 +131,39 @@
                 </swipeGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="305" y="-302"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="cIJ-j1-NmM">
+            <objects>
+                <viewController id="b7z-kt-9C0" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="zfK-Wd-Ni8"/>
+                        <viewControllerLayoutGuide type="bottom" id="Vfq-af-PN7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Bf9-RF-ahu">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="1000"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="e2s-tM-WVq">
+                                <rect key="frame" x="20" y="20" width="560" height="560"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="e2s-tM-WVq" secondAttribute="height" multiplier="1:1" id="swx-dV-sRE"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="e2s-tM-WVq" secondAttribute="trailing" id="BL0-Np-vpF"/>
+                            <constraint firstItem="e2s-tM-WVq" firstAttribute="top" secondItem="zfK-Wd-Ni8" secondAttribute="bottom" id="Ee4-vN-B48"/>
+                            <constraint firstItem="e2s-tM-WVq" firstAttribute="leading" secondItem="Bf9-RF-ahu" secondAttribute="leadingMargin" id="Rhm-nm-6NP"/>
+                        </constraints>
+                    </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="600" height="1000"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f8d-6W-58I" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1003" y="-302"/>
         </scene>
         <!--Main View Controller-->
         <scene sceneID="tne-QT-ifu">
